--- a/packages/vector/tsconfig.json
+++ b/packages/vector/tsconfig.json
@@ -16,8 +16,10 @@
     "baseUrl": ".",
     "paths": {
       "@shared/*": ["../../packages/shared/dist/*"],
-      "@media-utils/*": ["../../packages/media-utils/dist/*"], 
-      "@vector/*": ["./src/*"]
+      "@media-utils/*": ["../../packages/media-utils/dist/*"],
+      "@vector/*": ["./src/*"],
+      "@search/*": ["./packages/search/dist/*"],
+      "@smart-collections/*": ["./packages/smart-collections/dist/*"]
     }
   },
   "include": ["src/**/*"],
