--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -9,11 +9,11 @@
     "url": "https://github.com/iliashad"
   },
   "scripts": {
-    "dev": "pnpm run build:shared && cross-env ELECTRON_DISABLE_SANDBOX=1 electron-vite dev -w",
+    "dev": "cross-env ELECTRON_DISABLE_SANDBOX=1 electron-vite dev -w",
     "format": "prettier --write .",
     "lint": "eslint . --ext .ts,.tsx --fix",
     "start": "electron-vite preview",
-    "postinstall": "electron-builder install-app-deps && pnpm run build:shared",
+    "postinstall": "electron-builder install-app-deps",
     "build:shared": "pnpm --filter shared build",
     "vite:build:app": "electron-vite build",
     "electron:build:win": "electron-builder --win",
@@ -33,26 +33,9 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-scroll-area": "^1.2.10",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.6",
-    "@radix-ui/react-tabs": "^1.1.13",
-    "@types/fluent-ffmpeg": "^2.1.27",
-    "canvas-confetti": "^1.9.3",
-    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "lucide-react": "^0.541.0",
-    "radix-ui": "^1.4.3",
-    "react-error-boundary": "^6.0.0",
     "react-router-dom": "^7.9.4",
-    "sharp": "^0.34.5",
     "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.3.7",
-    "ws": "^8.18.3",
     "zod": "^4.1.3"
   },
   "devDependencies": {
@@ -63,7 +46,6 @@
     "@tailwindcss/vite": "^4.1.12",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.8",
-    "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^5.0.1",
     "cross-env": "^10.0.0",
     "dotenv": "^17.2.3",
@@ -73,7 +55,6 @@
     "eslint": "^9.34.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "framer-motion": "^12.23.12",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
