--- a/packages/prisma/tsconfig.json
+++ b/packages/prisma/tsconfig.json
@@ -9,7 +9,8 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "paths": {
-      "@db/*": ["../db/src/*"]
+      "@db/*": ["../db/src/*"],
+      "@shared/*": ["../shared/src/*"]
     }
   }
 }
