--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,10 +33,13 @@ jobs:
           - name: web
             dockerfile: docker/Dockerfile.web
             context: .
+          - name: ml
+            dockerfile: docker/Dockerfile.ml
+            context: .
         platform:
           - linux/amd64
           - linux/arm64
-    
+
     steps:
       - name: Maximize build space
         run: |
@@ -60,7 +63,7 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
-          platforms: ${{ matrix.platform }}
+          platforms: linux/amd64,linux/arm64
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -76,21 +79,16 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Generate platform suffix
-        id: platform
-        run: |
-          echo "suffix=$(echo ${{ matrix.platform }} | sed 's/\//-/g')" >> $GITHUB_OUTPUT
-
       - name: Extract metadata (tags, labels)
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service.name }}
           tags: |
-            type=ref,event=branch,suffix=-${{ steps.platform.outputs.suffix }}
-            type=semver,pattern={{version}},suffix=-${{ steps.platform.outputs.suffix }}
-            type=semver,pattern={{major}}.{{minor}},suffix=-${{ steps.platform.outputs.suffix }}
-      
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+
       - name: Set up env files
         run: |
           cp .env.example .env
@@ -98,17 +96,17 @@ jobs:
 
       - name: Start ChromaDB (testing)
         run: docker compose up -d chroma
-    
+
       - name: Build and Test
         uses: docker/build-push-action@v6
         with:
           context: ${{ matrix.service.context }}
           file: ${{ matrix.service.dockerfile }}
           target: testing
-          platforms: ${{ matrix.platform }}
-          push: false 
-          cache-from: type=gha,scope=${{ matrix.service.name }}-${{ matrix.platform }}
-          cache-to: type=gha,mode=max,scope=${{ matrix.service.name }}-${{ matrix.platform }}
+          platforms: linux/amd64,linux/arm64
+          push: false
+          cache-from: type=gha,scope=${{ matrix.service.name }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.service.name }}
 
       - name: Build and push Docker image
         id: push
@@ -117,15 +115,15 @@ jobs:
           context: ${{ matrix.service.context }}
           file: ${{ matrix.service.dockerfile }}
           target: production
-          platforms: ${{ matrix.platform }}
+          platforms: linux/amd64,linux/arm64
           build-args: |
             NODE_VERSION=22.20.0
             PNPM_VERSION=10.20.0
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha,scope=${{ matrix.service.name }}-${{ matrix.platform }}
-          cache-to: type=gha,mode=max,scope=${{ matrix.service.name }}-${{ matrix.platform }}
+          cache-from: type=gha,scope=${{ matrix.service.name }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.service.name }}
           sbom: false
 
       - name: Generate artifact attestation
@@ -134,45 +132,10 @@ jobs:
         with:
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service.name }}
           subject-digest: ${{ steps.push.outputs.digest }}
-          push-to-registry: true
-
-  create-manifest:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    if: github.event_name != 'pull_request'
-    permissions:
-      packages: write
-    strategy:
-      matrix:
-        service:
-          - name: background-jobs
-          - name: web
-    steps:
-      - name: Log in to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          
-      - name: Set lowercase image prefix
-        id: image
-        run: |
-          echo "IMAGE_PREFIX=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')/edit-mind" >> $GITHUB_ENV
-          
-      - name: Create and push manifest
-        run: |
-          TAG="${{ github.ref_name }}"
-          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
-            TAG="main"
-          fi
-          
-          docker buildx imagetools create -t ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service.name }}:${TAG} \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service.name }}:${TAG}-linux-amd64 \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service.name }}:${TAG}-linux-arm64
+          push-to-registry: ${{ github.event_name != 'pull_request' }}
 
   create-release:
-    needs: create-manifest
+    needs: build-and-push
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     permissions:
@@ -187,7 +150,3 @@ jobs:
           tag_name: ${{ github.ref_name }}
           name: Release ${{ github.ref_name }}
           draft: true
-          files: |
-            docker-compose.yml
-            .env.example
-            .env.system.example
