fix: update docker file and include the new ML docker service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   background-jobs:
+    restart: unless-stopped
     image: ghcr.io/iliashad/edit-mind-background-jobs:${VERSION:-latest}
     container_name: edit-mind-background-jobs
     ports:
       - "${BACKGROUND_JOBS_PORT:-4000}:4000"
-      - "${BACKGROUND_JOBS_WS_PORT:-8765}:8765"
     depends_on:
       postgres:
         condition: service_healthy
@@ -12,6 +12,8 @@ services:
         condition: service_healthy
       chroma:
         condition: service_started
+      ml:
+          condition: service_started
     env_file:
       - .env
       - .env.system
@@ -19,11 +21,9 @@ services:
       - app-network
     volumes:
       - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
-      - whisper-models:/app/models:rw
-      - yolo-models:/app/models/yolo:rw  
-      - edit-mind-data:/app/data
-
+      - ../.data:/app/data
   web:
+    restart: unless-stopped
     image: ghcr.io/iliashad/edit-mind-web:${VERSION:-latest}
     container_name: edit-mind-web
     environment:
@@ -42,7 +42,7 @@ services:
       - .env.system
     volumes:
       - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
-      - edit-mind-data:/app/data
+      - ../.data:/app/data
     networks:
       - app-network
 
@@ -55,13 +55,12 @@ services:
     ports:
       - "${CHROMA_PORT:-8000}:8000"
     volumes:
-      - chroma-data:/chroma/chroma
+      - ../.data/chroma:/chroma/chroma
     networks:
       - app-network
-    env_file:
-      - .env
-      - .env.system
+
   redis:
+    restart: unless-stopped
     image: redis:7
     container_name: edit-mind-redis
     ports:
@@ -75,44 +74,50 @@ services:
       interval: 5s
       timeout: 3s
       retries: 10
-    env_file:
-      - .env
-      - .env.system
+
   postgres:
     image: postgres:16-alpine
     container_name: edit-mind-postgres
     restart: unless-stopped
+    env_file:
+      - .env
+      - .env.system
     ports:
       - "${POSTGRES_PORT:-5433}:5432"
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-user}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
-      POSTGRES_DB: ${POSTGRES_DB:-app}
       PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
       - pgdata_edit_mind:/var/lib/postgresql/data
     networks:
       - app-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-user} -d ${POSTGRES_DB:-app}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
+  ml:
+    restart: unless-stopped
+    image: ghcr.io/iliashad/edit-mind-ml:${VERSION:-latest}
+    container_name: edit-mind-ml
+    ports:
+      - "${ML_WS_PORT:-8765}:8765"
     env_file:
       - .env
       - .env.system
+    environment:
+      NODE_ENV: production
+    networks:
+      - app-network
+    volumes:
+      - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
+      - ml-models:/ml-models:rw
 volumes:
   pgdata_edit_mind:
     driver: local
   redis_data:
     driver: local
-  whisper-models:
+  ml-models:
     driver: local
-  yolo-models:
-    driver: local
-  chroma-data:
-    driver: local
-  edit-mind-data:
-    driver: local
+
 networks:
   app-network:
