--- a/docker/Dockerfile.background-jobs
+++ b/docker/Dockerfile.background-jobs
@@ -9,150 +9,140 @@ ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
 RUN corepack enable && corepack prepare pnpm@${PNPM_VERSION} --activate
 
-WORKDIR /app
-
-RUN mkdir -p /app/models /app/models/yolo /tmp
-
-
-
-FROM base AS node-deps
-
-COPY pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts ./
-COPY apps/background-jobs/package.json ./apps/background-jobs/
-COPY apps/web/package.json ./apps/web/
-COPY packages/shared/package.json ./packages/shared/
-COPY packages/prisma ./packages/prisma/
-COPY .npmrc ./
-COPY prisma.config.ts ./
-
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
-    pnpm install --frozen-lockfile 
-
-
-FROM --platform=$BUILDPLATFORM python:3.11-slim-bookworm AS python-deps
-
-ARG TARGETARCH
-
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/uv
-
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential cmake libopenblas-dev && rm -rf /var/lib/apt/lists/*
+  openssl ffmpeg libcurl4-openssl-dev libssl-dev && \
+  rm -rf /var/lib/apt/lists/*
+
+
+FROM base AS dependencies
 
 WORKDIR /app
-COPY python/requirements.txt ./python/
 
-RUN uv venv /app/.venv && \
-    VIRTUAL_ENV=/app/.venv uv pip install --no-cache -r python/requirements.txt
-
-    
-    
-FROM node-deps AS builder
-
-COPY . .
+COPY pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts .npmrc ./
+COPY apps/background-jobs/package.json ./apps/background-jobs/
+COPY packages/shared/package.json ./packages/shared/
+COPY packages/db/package.json ./packages/db/
+COPY packages/vector/package.json ./packages/vector/
+COPY packages/ai/package.json ./packages/ai/
+COPY packages/immich/package.json ./packages/immich/
+COPY packages/media-utils/package.json ./packages/media-utils/
+COPY packages/search/package.json ./packages/search/
+COPY packages/smart-collections/package.json ./packages/smart-collections/
+COPY packages/prisma/schema.prisma ./packages/prisma/
 
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
-    pnpm install --frozen-lockfile
+  pnpm install --frozen-lockfile
+
+FROM base AS builder
+
+WORKDIR /app
+
+COPY --from=dependencies /app/node_modules ./node_modules
+
+COPY apps/background-jobs ./apps/background-jobs/
+COPY packages/shared ./packages/shared/
+COPY packages/db ./packages/db/
+COPY packages/vector ./packages/vector/
+COPY packages/ai ./packages/ai/
+COPY packages/immich ./packages/immich/
+COPY packages/media-utils ./packages/media-utils/
+COPY packages/search ./packages/search/
+COPY packages/smart-collections ./packages/smart-collections/
+COPY packages/prisma ./packages/prisma/
+COPY pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts .npmrc turbo.json tsconfig.json  ./
 
 RUN pnpm --filter prisma generate
 
-RUN pnpm --filter shared build && \
-    pnpm --filter background-jobs build
-
-FROM base AS prod-deps
-
-COPY pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts ./
-COPY apps/background-jobs/package.json ./apps/background-jobs/
-COPY apps/web/package.json ./apps/web/
-COPY packages/shared/package.json ./packages/shared/
-COPY packages/prisma ./packages/prisma/
-COPY .npmrc ./
-COPY prisma.config.ts ./
-
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
-    pnpm install --prod --frozen-lockfile
-
-FROM base AS production
-
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    python3 ffmpeg libopenblas0 liblapack3 libsm6 libxext6 libgomp1 \
-    && rm -rf /var/lib/apt/lists/*
-
-WORKDIR /app
-
-COPY --from=python-deps /app/.venv /app/.venv
-
-COPY --from=prod-deps /app/node_modules /app/node_modules
-
-COPY --from=builder /app/apps/background-jobs/dist ./apps/background-jobs/dist
-COPY --from=builder /app/packages/shared/dist ./packages/shared/dist
-COPY --from=builder /app/packages/prisma ./packages/prisma
-COPY --from=builder /app/package.json /app/pnpm-workspace.yaml /app/prisma.config.ts ./
-
-ENV NODE_ENV=production VIRTUAL_ENV="/app/.venv" PATH="/app/.venv/bin:$PATH"
-
-
-EXPOSE 4000 8765
-
-CMD ["sh", "-c", "\
-  pnpm --filter prisma migrate deploy && \
-  pnpm --filter prisma generate && \
-  pnpm --filter prisma seed && \
-  pnpm --filter background-jobs start \
-"]
-
-
-FROM builder AS development
-
-COPY --from=python-deps /app/.venv /app/.venv
-COPY --from=python-deps /app/python /app/python
-COPY python/requirements-dev.txt ./python/
-
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    libopenblas0 \
-    liblapack3 \
-    ffmpeg \
-    libx11-6 libgtk-3-0 libsm6 libxext6 libxrender1 libgomp1 \
-    && rm -rf /var/lib/apt/lists/*
-
-ENV NODE_ENV=development \
-    PATH="/app/.venv/bin:$PATH" \
-    VIRTUAL_ENV="/app/.venv"
-
-RUN --mount=type=cache,target=/root/.cache/uv \
-    uv pip install -r python/requirements-dev.txt
+RUN pnpm run build
 
 RUN pnpm --filter background-jobs build
 
-WORKDIR /app/
-
-EXPOSE 4000 8765
-
-CMD ["sh", "-c", "\
-  pnpm --filter prisma migrate deploy && \
-  pnpm --filter prisma generate && \
-  pnpm --filter prisma seed && \
-  pnpm --filter background-jobs dev \
-"]
-
-
-
-FROM base AS testing
-
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    python3 ffmpeg libopenblas0 liblapack3 libsm6 libxext6 libgomp1 \
-    && rm -rf /var/lib/apt/lists/*
+FROM base AS production
 
 WORKDIR /app
 
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/uv
+WORKDIR /app
 
-COPY python ./python/
+COPY pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts .npmrc ./
+COPY apps/background-jobs/package.json ./apps/background-jobs/
+COPY packages/shared/package.json ./packages/shared/
+COPY packages/db/package.json ./packages/db/
+COPY packages/vector/package.json ./packages/vector/
+COPY packages/ai/package.json ./packages/ai/
+COPY packages/immich/package.json ./packages/immich/
+COPY packages/media-utils/package.json ./packages/media-utils/
+COPY packages/search/package.json ./packages/search/
+COPY packages/smart-collections/package.json ./packages/smart-collections/
+COPY packages/prisma/schema.prisma ./packages/prisma/
 
-RUN uv venv /app/.venv && \
-    VIRTUAL_ENV=/app/.venv uv pip install --no-cache -r python/requirements.txt && \
-    uv pip install --no-cache -r python/requirements-dev.txt
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
+  pnpm install --prod --frozen-lockfile
 
-ENV NODE_ENV=testing VIRTUAL_ENV="/app/.venv" PATH="/app/.venv/bin:$PATH"
+COPY --from=builder /app/apps/background-jobs/dist ./apps/background-jobs/dist
 
-WORKDIR /app/python
-RUN pytest tests
+COPY --from=builder /app/packages/prisma/node_modules /app/packages/prisma
+COPY --from=builder /app/packages/db/dist ./packages/db/dist
+COPY --from=builder /app/packages/shared/dist ./packages/shared/dist
+COPY --from=builder /app/packages/vector/dist ./packages/vector/dist
+COPY --from=builder /app/packages/ai/dist ./packages/ai/dist
+COPY --from=builder /app/packages/immich/dist ./packages/immich/dist
+COPY --from=builder /app/packages/media-utils/dist ./packages/media-utils/dist
+COPY --from=builder /app/packages/search/dist ./packages/search/dist
+COPY --from=builder /app/packages/smart-collections/dist ./packages/smart-collections/dist
+
+EXPOSE ${BACKGROUND_JOBS_PORT}
+
+CMD ["pnpm", "--filter", "background-jobs", "start"]
+
+FROM dependencies AS development
+
+
+COPY --from=dependencies /app/node_modules ./node_modules
+
+WORKDIR /app
+
+COPY apps/background-jobs ./apps/background-jobs
+
+COPY packages/prisma ./packages/prisma
+COPY packages/db ./packages/db
+COPY packages/shared ./packages/shared
+COPY packages/vector ./packages/vector
+COPY packages/ai ./packages/ai
+COPY packages/immich ./packages/immich
+COPY packages/media-utils ./packages/media-utils
+COPY packages/search ./packages/search
+COPY packages/smart-collections ./packages/smart-collections
+COPY turbo.json ./
+COPY tsconfig.json ./
+
+RUN pnpm --filter prisma generate
+
+RUN pnpm run build
+
+ENV NODE_ENV=development
+
+EXPOSE 4000
+
+CMD ["pnpm", "--filter", "background-jobs", "start"]
+
+FROM base AS testing
+
+WORKDIR /app
+
+
+COPY --from=dependencies /app/node_modules ./node_modules
+
+
+COPY --from=builder /app/apps/background-jobs/dist ./apps/background-jobs/dist
+COPY --from=builder /app/packages ./packages
+COPY --from=builder /app/package.json /app/pnpm-workspace.yaml /app/prisma.config.ts /app/tsconfig.json /app/.npmrc ./
+
+ENV NODE_ENV=testing
+
+COPY apps/ ./apps/
+COPY packages/ ./packages/
+COPY turbo.json ./
+
+RUN pnpm --filter prisma generate
+
+CMD ["pnpm", "--filter", "ai", "test"]
