--- a/apps/background-jobs/package.json
+++ b/apps/background-jobs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "background-jobs",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "type": "module",
   "scripts": {
@@ -22,6 +22,7 @@
     "express": "^4.21.2",
     "ioredis": "^5.4.2",
     "jimp": "^1.6.0",
+    "jsonwebtoken": "^9.0.3",
     "pg": "^8.13.1",
     "zod": "^4.1.12"
   },
@@ -30,6 +31,7 @@
     "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.0.0",
     "@types/pg": "^8.15.6",
     "ts-node-dev": "^2.0.0",
