--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,8 @@ out
 .DS_Store
 *.log
 temp
-.thumbnails
-python/.venv
-.results
 .env
 .faces
-analysis_results
 *.pt
 output-videos
 __pycache__
@@ -17,19 +13,18 @@ __pycache__
 .chroma_db_*
 .locations.json
 .venv
-apps/web/.react-router
-test-videos
 internal
-apps/background-jobs/known_faces.json
 .faces.json
 *.gguf
-data/
-models/
+./models/**/*
 .pnpm-store/*
-test-results/*
-.env.testing
-.env.dev
-docker/.env.system
-.env.system
+.env.*
+!.env.system.example
+!.env.example
 !python/.faces
 *.pkl
+.turbo
+!turbo.json
+.data
+ml-models
+.pytest_cache
