--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -20,11 +20,12 @@
     "test:ui": "NODE_ENV=testing  vitest --ui"
   },
   "dependencies": {
-    "db": "workspace:*",
     "@google/genai": "^1.25.0",
     "@google/generative-ai": "^0.24.1",
-    "shared": "workspace:*",
-    "node-llama-cpp": "^3.14.2"
-  },
-  "devDependencies": {}
+    "db": "workspace:*",
+    "node-llama-cpp": "^3.14.2",
+    "ollama": "^0.6.3",
+    "search": "workspace:*",
+    "shared": "workspace:*"
+  }
 }
