--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,21 +11,26 @@
     "test": "playwright test"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
-    "@prisma/client": "6.19.0",
+    "@lexical/react": "^0.39.0",
     "@react-router/fs-routes": "^7.9.5",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "@remix-run/file-storage": "^0.13.0",
+    "@remix-run/form-data-parser": "^0.14.0",
     "@tanstack/react-virtual": "^3.13.12",
-    "@xenova/transformers": "^2.17.2",
     "bcryptjs": "^2.4.3",
     "chromadb": "^3.1.1",
+    "clsx": "^2.1.1",
     "cross-env": "^10.1.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "isbot": "^5.1.31",
+    "jsonwebtoken": "^9.0.3",
+    "lexical": "^0.39.0",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.541.0",
     "nanoid": "^5.1.6",
     "node-fetch": "^3.3.2",
     "react": "^19.1.1",
@@ -35,13 +40,15 @@
     "react-router": "^7.9.2",
     "react-router-dom": "^7.9.5",
     "tsconfig-paths": "^4.2.0",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
     "@react-router/dev": "^7.9.2",
     "@tailwindcss/postcss": "^4.1.16",
     "@tailwindcss/vite": "^4.1.13",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash": "^4.17.21",
     "@types/node": "^22.0.0",
     "@types/react": "^19.1.13",
