--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -20,11 +20,8 @@
     "test:ui": "NODE_ENV=testing  vitest --ui"
   },
   "dependencies": {
-    "db": "workspace:*",
-    "@google/genai": "^1.25.0",
-    "@google/generative-ai": "^0.24.1",
+    "compute-cosine-similarity": "^1.1.0",
     "shared": "workspace:*",
-    "node-llama-cpp": "^3.14.2"
-  },
-  "devDependencies": {}
+    "vector": "workspace:*"
+  }
 }
