--- a/packages/immich/package.json
+++ b/packages/immich/package.json
@@ -21,10 +21,7 @@
   },
   "dependencies": {
     "db": "workspace:*",
-    "@google/genai": "^1.25.0",
-    "@google/generative-ai": "^0.24.1",
-    "shared": "workspace:*",
-    "node-llama-cpp": "^3.14.2"
+    "shared": "workspace:*"
   },
   "devDependencies": {}
 }
