--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,10 +91,9 @@ services:
     networks:
       - app-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      test:
+        - "CMD-SHELL"
+        - "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"
   ml:
     restart: unless-stopped
     image: ghcr.io/iliashad/edit-mind-ml:${VERSION:-latest}
