fix: improve smart collections package and job handler

--- a/packages/smart-collections/tsconfig.json
+++ b/packages/smart-collections/tsconfig.json
@@ -18,8 +18,9 @@
       "@shared/*": ["../../packages/shared/dist/*"],
       "@db/*": ["../../packages/db/dist/*"],
       "@vector/*": ["../../packages/vector/dist/*"],
-      "@ai/*": ["./src/*"],
-      "@media-utils/*": ["../../packages/media-utils/dist/*"]
+      "@ai/*": ["../../packages/ai/src/*"],
+      "@media-utils/*": ["../../packages/media-utils/dist/*"],
+      "@smart-collections/*": ["./src/*"]
     }
   },
   "include": ["src/**/*"],
