--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "desktop",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "AI-Powered Video Indexing and Search",
   "main": "./out/main/main.js",
   "license": "MIT",
@@ -34,6 +34,7 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "clsx": "^2.1.1",
+    "electron-store": "^11.0.2",
     "react-router-dom": "^7.9.4",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.3"
