--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,6 +1,6 @@
 {
   "name": "db",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "license": "MIT",
   "type": "module",
@@ -18,15 +18,10 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.0",
     "bcryptjs": "^2.4.3",
     "nanoid": "^5.1.6"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^22.0.0",
-    "prisma": "6.19.0",
-    "ts-node": "^10.9.2",
-    "typescript": "5.9.2"
+    "@types/bcryptjs": "^2.4.6"
   }
 }
