--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -16,8 +16,7 @@
     "@types/react-dom": "^19.1.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tsup": "^8.1.0",
-    "typescript": "5.9.2"
+    "tsup": "^8.1.0"
   },
   "peerDependencies": {
     "react": "^19.1.1",
