fix: update .env example files

--- a/.env.system.example
+++ b/.env.system.example
@@ -3,7 +3,11 @@
 
 # DATABASE
 DATABASE_URL="postgresql://user:password@postgres:5432/app"
-
+POSTGRES_USER="user"
+POSTGRES_PASSWORD="password"
+POSTGRES_DB="app"
+PGDATA="/var/lib/postgresql/data/pgdata"
+POSTGRES_PORT="5432"
 
 # REDIS
 REDIS_URL="redis://redis:6379"
@@ -17,11 +21,10 @@ CHROMA_PORT="8000"
 IS_PERSISTENT="TRUE"
 
 
-# PYTHON ANALYSIS SERVICE
-PYTHON_HOST="background-jobs"
-PYTHON_PORT="8765"
-PYTHON_SCRIPT="/app/python/analysis_service.py"
-VENV_PATH="/app/.venv"
+# ML ANALYSIS SERVICE
+ML_HOST="ml"
+ML_PORT="8769"
+
 
 
 # INTERNAL STORAGE PATHS
@@ -46,5 +49,6 @@ YOLO_CONFIG_DIR="/app/models/yolo"
 PORT="3745"
 BACKGROUND_JOBS_PORT="4000"
 BACKGROUND_JOBS_URL="http://background-jobs:4000"
-NODE_ENV="development"
+NODE_ENV="production"
 ANONYMIZED_TELEMETRY="FALSE"
+WEB_APP_URL="http://web:3745"
