--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,20 @@
-USE_LOCAL_MODEL="false"
+# Keys
 SESSION_SECRET=""
-GEMINI_API_KEY=""
 ENCRYPTION_KEY=""
+
+# Media (Important)
 HOST_MEDIA_PATH="/path/to/your/media/folder"
+
+# Local Ollama Option (Recommend)
+OLLAMA_MODEL="qwen2.5:7b-instruct"
+USE_OLLAMA_MODEL="false"
+OLLAMA_HOST=""
+OLLAMA_PORT=""
+
+# Local Mode (node-llam-cpp)
+USE_LOCAL_MODEL="false"
 SEARCH_AI_MODEL="/app/models/Qwen2.5-14B-Instruct-Q5_K_M.gguf"
+
+# Gemini Option
+GEMINI_API_KEY=""
+USE_GEMINI="false"
