--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "build:watch": "turbo watch build --filter='./packages/*'"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.0"
+    "@prisma/client": "^6.19.0",
+    "tsx": "^4.21.0",
+    "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
     "tsconfig-paths": "^4.2.0",
-    "tsx": "^4.21.0",
     "turbo": "^2.7.2",
     "typescript": "^5.9.3"
   },
