--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
-    "tsx": "^4.21.0",
-    "tsconfig-paths": "^4.2.0"
+    "prisma": "6.19.0",
+    "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
