--- a/packages/vector/package.json
+++ b/packages/vector/package.json
@@ -24,6 +24,7 @@
     "@xenova/transformers": "^2.17.2",
     "chromadb": "^3.0.17",
     "chromadb-default-embed": "^2.14.0",
-    "shared": "workspace:*"
+    "shared": "workspace:*",
+    "media-utils": "workspace:*"
   }
 }
