fix: minor improvements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,7 +87,7 @@ services:
     environment:
       PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
-      - pgdata_edit_mind:/var/lib/postgresql/data
+      - ../.pgdata/:/var/lib/postgresql/data
     networks:
       - app-network
     healthcheck:
@@ -111,8 +111,6 @@ services:
       - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
       - ml-models:/ml-models:rw
 volumes:
-  pgdata_edit_mind:
-    driver: local
   redis_data:
     driver: local
   ml-models:
