--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -62,7 +62,7 @@ services:
       - app-network-dev
     volumes:
       - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
-      - ml-models:/app/ml-models:rw
+      - ml-models-dev:/app/ml-models:rw
       - ../.data:/app/data
       - ../python:/app/python
   web:
@@ -124,7 +124,7 @@ services:
     ports:
       - "${REDIS_PORT:-6379}:6379"
     volumes:
-      - redis_data:/data
+      - redis_data-dev:/data
     networks:
       - app-network-dev
     healthcheck:
@@ -145,7 +145,7 @@ services:
     environment:
       PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
-      - pgdata_edit_mind:/var/lib/postgresql/data
+      - ../.pgdata/:/var/lib/postgresql/data
     networks:
       - app-network-dev
     healthcheck:
@@ -157,11 +157,9 @@ services:
       retries: 5
 
 volumes:
-  pgdata_edit_mind:
+  redis_data-dev:
     driver: local
-  redis_data:
-    driver: local
-  ml-models:
+  ml-models-dev:
     driver: local
 
 networks:
