--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,9 +107,11 @@ services:
       NODE_ENV: production
       YOLO_CONFIG_DIR: /ml-models/ultralytics
       DEEPFACE_HOME: /ml-models/deepface
+      TRANSCRIPTION_MODEL_CACHE: /ml-models/whisper
     volumes:
       - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
       - ml-models:/ml-models:rw
+      - .data:/app/data
     networks:
       - app-network
 volumes:
