--- a/docker/Dockerfile.background-jobs
+++ b/docker/Dockerfile.background-jobs
@@ -131,7 +131,7 @@ ENV NODE_ENV=development
 
 EXPOSE ${BACKGROUND_JOBS_PORT}
 
-CMD ["pnpm", "--filter", "background-jobs", "start"]
+CMD ["pnpm", "--filter", "background-jobs", "dev"]
 
 FROM base AS testing
 
